force-app/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>Post an image (200px wide, transparent .PNG recommended) in the &quot;Product Images&quot; folder of Documents.  Copy the Record ID (in the URL) of the new document and paste it here.</inlineHelpText>
    <label>Image ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>