force-app/main/default/objects/Product2/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <description>Used by the Org Customizer (Heroku) to display photos of products.</description>
    <formula>IMAGE(purl__c , &quot;No Image&quot;, 300, 512)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>