force-app/main/default/objects/Product2/fields/purl__c.field-meta.xml
<CustomField>
    <fullName>purl__c</fullName>
    <formula>IF( Image__c != &quot;&quot;, LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;servlet/servlet.FileDownload?file=&apos; + Image__c,IF( (Image_URL__c != &quot;&quot; &amp;&amp; Image__c == &quot;&quot;), Image_URL__c,&apos;https://s3.amazonaws.com/rcgidoimages/CG/noImage.png&apos;))</formula>
    <label>purl</label>
    <type>Text</type>
</CustomField>