force-app/main/default/objects/Product2/fields/Seat_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Seat_Capacity__c</fullName>
    <label>Seat Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>