force-app/main/default/objects/Product2/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
                <default>true</default>
                <label>Not Available</label>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>